corrected a small y-overflow issue renamed the page/title

--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,13 @@
   --mainColor:#f73;
   --mainDark:rgb(131, 46, 3);
   --mainLight:rgb(253, 220, 204);
-
 }
 
 #root, html, body, #app{
   width:100%;
   height:100%;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -18,7 +17,6 @@ html {
 
 *, *:before, *:after {
   box-sizing: inherit;
-  outline:1px solid red;
 }
 
 body, .App{
@@ -47,6 +45,7 @@ body, .App{
 
 .wrapper{
   position:relative;
+  width:100%;
   background:#fff;
   /* margin-bottom:100px; */
   text-align: justify;
